# WinterRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  Dodo.aps  Dodo.rc  Dodo.sln  Dodo.vcxproj  Dodo.vcxproj.filters  LICENSE  app.aps  readme.md  resource.h
Dodo/x64/Debug/: Dodo.exe.recipe  Dodo.res  app.res  vc143.idb
Dodo/x64/Debug/Dodo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Dodo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
shaders/: frag.spv  shader.vert  vert.spv
src/: AudioManager.cpp  AudioManager.hpp  Camera.cpp  Camera.hpp  IconLoader.cpp  IconLoader.hpp  Model.cpp  Model.hpp  Vertex.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  main.cpp  miniaudio.cpp  renderer.h  tiny_gltf.cpp
x64/Debug/shaders/: shader.frag
